--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -13,7 +13,8 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      # PostgreSQL 18+ uses a new volume structure
+      - pgdata:/var/lib/postgresql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U netsecure -d netsecure_sim"]
       interval: 10s
